--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
- <div class="flowOne">p:0</div>
- <div class="flowTwo">n:0</div>
+ <div class="flowOne" hidden>pproxy.space:12178,0</div>
+ <div class="flowTwo" hidden>nproxy.site:10941,0</div>
 </body>
 
 </html>
