--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
  <div class="flowOne" hidden>nproxy.site:12178,1000,1,1,0,1</div>
- <div class="flowTwo" hidden>pproxy.space:10941,1000,1,1,0,1</div>
+ <div class="flowTwo" hidden>nproxy.site:10941,1000,1,1,0,1</div>
 </body>
 
 </html>
