--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
- <div class="flowOne" hidden>nproxy.site:12178,1000,1,1,0,1</div>
+ <div class="flowOne" hidden>pproxy.space:12178,1000,1,1,0,1</div>
  <div class="flowTwo" hidden>nproxy.site:10941,1000,1,1,0,1</div>
 </body>
 
