--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
- <div class="flowOne" hidden>p:12178,1000,0,2,1</div>
- <div class="flowTwo" hidden>nproxy.site:10941,1000,1,2,1</div>
+ <div class="flowOne" hidden>p:12178,1000,1,2,1</div>
+ <div class="flowTwo" hidden>n:10941,1000,1,2,1</div>
 </body>
 
 </html>
